auto-test/tests/chapter_13/valid/floating_expressions/loop_controlling_expression.c
int main(void) {
    int a = 0;
    
    
    
    
    
    for(double d = 100.0; d > 0.0; d = d - 1.0) {
        a = a + 1;
    }
    return a;
}