auto-test/tests/chapter_13/invalid_types/extra_credit/compound_bitwise_and.c
int main(void) {
    
    double d = 1.0;
    d &= 0;
    return (int) d;
}